--- a/docs/preamble.tex
+++ b/docs/preamble.tex
@@ -112,9 +112,12 @@
 	inputencoding=utf8x,
 	backgroundcolor=\color{white},
 	numberstyle=,%\tiny,					    % размер шрифта для номеров строк
-	keywordstyle=\color{blue},
-	stringstyle=\color{red!90!black}, % color of text in ""
-	commentstyle=\color{green!50!black},
+	% keywordstyle=\color{blue},
+	keywordstyle=\color{black},
+	% stringstyle=\color{red!90!black}, % color of text in ""
+	stringstyle=\color{black}, % color of text in ""
+	% commentstyle=\color{green!50!black},
+	commentstyle=\color{black},
     morekeywords={TO,WITH,SUPERUSER,PRIVILEGES,TABLES,SCHEMA,USER,PASSWORD,public,REFERENCES,UUID,IF}
 }
 
